Fix: Adicionar localhost:8080 explicitamente no CORS